--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">영화 URL</label>
         </div>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">별점</label>
+            <select class="form-select" id="inputGroupSelect01">
+              <option selected>-- 선택하기 --</option>
+              <option value="1">⭐</option>
+              <option value="2">⭐⭐</option>
+              <option value="3">⭐⭐⭐</option>
+              <option value="4">⭐⭐⭐⭐</option>
+              <option value="5">⭐⭐⭐⭐⭐</option>
+            </select>
+          </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                 style="height: 100px"></textarea>
@@ -114,49 +125,49 @@
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                    <img src="https://t1.daumcdn.net/cfile/tistory/99AF78385BB8D2EF2B"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <h5 class="card-title">LEGRANDBLEU</h5>
+                        <p class="card-text">"가장 힘든 것은 바다 밑에 있을 때야. 다시 올라와야 할 이유를 찾아야 하거든."</p>
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p class="mycomment">오롯이 혼자만의 바다에 잠기고 싶을 때 볼만한 영화</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                    <img src="https://joyposter.cafe24.com//NEW-posters/FMV/FMV-558.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <h5 class="card-title">FLIPPED</h5>
+                        <p class="card-text">"모든 사람은 일생에 단 한번 무지개 같이 변하는 사람을 만난단다."</p>
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p class="mycomment">몇번을 돌려봐도 좋은 영화</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                    <img src="https://www.themoviedb.org/t/p/original/atLMzzA7pOB0BdfM89V7BbdtLN6.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <h5 class="card-title">THE GRAND BUDAPEST HOTEL</h5>
+                        <p class="card-text">"Rudeness is merely the expression of fear"</p>
+                        <p>⭐⭐⭐⭐</p>
+                        <p class="mycomment">눈이 즐겁고 싶을 때 볼만한 영화</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                    <img src="https://gticket.quai10.be/image.aspx?img=movies_photo/30690/deadpoetssociety.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다.</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <h5 class="card-title">DEAD POETS SOCIETY</h5>
+                        <p class="card-text">"Oh captain, my captain!"</p>
+                        <p>⭐⭐⭐⭐⭐</p>
+                        <p class="mycomment">지금 내가 정말, 정말로 하고 싶은 일을 찾았단 말야.</p>
                     </div>
                 </div>
             </div>
