--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="https://search.pstatic.net/common?quality=75&direct=true&src=https%3A%2F%2Fmovie-phinf.pstatic.net%2F20160811_237%2F1470893687476y2lJU_JPEG%2Fmovie_image.jpg"
+                    <img src="https://image.tmdb.org/t/p/original/4GeZZFgx9bdlIzJmWu1yYFlCDed.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">DEAD POETS SOCIETY</h5>
@@ -176,4 +176,5 @@
 </body>
 
 </html>
+
 
